virt01/manual/mail/mailgallows/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailgallows-svc
  labels:
    app: mailgallows
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      protocol: TCP
      name: web-svc-port
  selector:
    app: mailgallows
